// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows simple parent selector for state selector 1`] = `
"import { styled } from 'linaria/react';
export const Page =
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"Page\\",
  class: \\"ph6xni0\\",
  mod: {
    \\"ph6xni0--primary-0\\": props => props.primary
  }
});"
`;

exports[`allows simple parent selector for state selector 2`] = `

CSS:

.ph6xni0 {
  color: #fff;
  .dark-theme &.ph6xni0--primary-0 {
    color: #241047;
  }
}

Dependencies: NA

`;

exports[`collapses only one arrow function parent 1`] = `
"import { styled } from 'linaria/react';
export const Page = (props, options) =>
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"Page\\",
  class: \\"ph6xni0\\",
  mod: {
    \\"ph6xni0--primary-0\\": props => props.primary
  }
});"
`;

exports[`collapses only one arrow function parent 2`] = `

CSS:

.ph6xni0 {
color: #fff;
&.ph6xni0--primary-0 {
  color: #241047;
}
}

Dependencies: NA

`;

exports[`does not include styles if not referenced anywhere 1`] = `
"import { css } from 'linaria';
import { styled } from 'linaria/react';
const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});
const title = \\"t1u0rrat\\";"
`;

exports[`does not include styles if not referenced anywhere 2`] = `Object {}`;

exports[`does not output CSS if none present 1`] = `
"const number = 42;
const title = String.raw\`This is something\`;"
`;

exports[`does not output CSS if none present 2`] = `Object {}`;

exports[`evaluates and inlines expressions in scope 1`] = `
"import { styled } from 'linaria/react';
const color = 'blue';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`evaluates and inlines expressions in scope 2`] = `

CSS:

.th6xni0 {
  color: blue;
  width: 33.333333333333336%;
}

Dependencies: NA

`;

exports[`handles alternative propNames 1`] = `
"import { styled } from 'linaria/react';
const Page =
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"Page\\",
  class: \\"ph6xni0\\",
  mod: {
    \\"ph6xni0--primary-0\\": state => state.primary
  }
});"
`;

exports[`handles alternative propNames 2`] = `Object {}`;

exports[`handles basic properties 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\",
  vars: {
    \\"th6xni0-0\\": [props => props.size, \\"px\\"]
  }
});"
`;

exports[`handles basic properties 2`] = `

CSS:

.th6xni0 {
  font-size: var(--th6xni0-0);
}

Dependencies: NA

`;

exports[`handles css template literal in JSX element 1`] = `
"import { css } from 'linaria';
<Title class={\\"th6xni0\\"} />;"
`;

exports[`handles css template literal in JSX element 2`] = `

CSS:

.th6xni0 { font-size: 14px; }

Dependencies: NA

`;

exports[`handles css template literal in object property 1`] = `
"import { css } from 'linaria';
const components = {
  title: \\"th6xni0\\"
};"
`;

exports[`handles css template literal in object property 2`] = `

CSS:

.th6xni0 {
    font-size: 14px;
  }

Dependencies: NA

`;

exports[`handles interpolation followed by unit 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\",
  vars: {
    \\"th6xni0-0\\": [size, \\"em\\"],
    \\"th6xni0-1\\": [shadow, \\"px\\"],
    \\"th6xni0-2\\": [size, \\"px\\"],
    \\"th6xni0-3\\": [props => props.width, \\"vw\\"],
    \\"th6xni0-4\\": [props => {
      if (true) {
        return props.height;
      } else {
        return 200;
      }
    }, \\"px\\"],
    \\"th6xni0-5\\": [unit, \\"fr\\"],
    \\"th6xni0-7\\": [function (props) {
      return 200;
    }, \\"px\\"]
  }
});"
`;

exports[`handles interpolation followed by unit 2`] = `

CSS:

.th6xni0 {
  font-size: var(--th6xni0-0);
  text-shadow: black 1px var(--th6xni0-1), white -2px -2px;
  margin: var(--th6xni0-2);
  width: calc(2 * var(--th6xni0-3));
  height: var(--th6xni0-4);
  grid-template-columns: var(--th6xni0-5) 1fr 1fr var(--th6xni0-5);
  border-radius: var(--th6xni0-7)
}

Dependencies: NA

`;

exports[`handles modifier condition selector 1`] = `
"import { styled } from 'linaria/react';
export const Button =
/*#__PURE__*/
styled(\\"button\\")({
  name: \\"Button\\",
  class: \\"bh6xni0\\",
  mod: {
    \\"bh6xni0--primary-3\\": props => props.primary
  },
  vars: {
    \\"bh6xni0-0\\": [props => props.color]
  }
});"
`;

exports[`handles modifier condition selector 2`] = `

CSS:

.bh6xni0 {
  background: var(--bh6xni0-0);
  padding: 16px 24px;
  color: red;
  transition: 200ms;
  font-size: 24px;
  &:hover {
    color: var(--bh6xni0-0);
    background: white;
  }

  &.bh6xni0--primary-3 {
    border-radius: 30px;
    background: #18b09d;
    color: white;
    &:hover {
      background: #087b6d;
    }
  }
}

Dependencies: NA

`;

exports[`handles nested blocks 1`] = `
"import { styled } from 'linaria/react';
export const Button =
/*#__PURE__*/
styled(\\"button\\")({
  name: \\"Button\\",
  class: \\"bh6xni0\\",
  vars: {
    \\"bh6xni0-0\\": [regular]
  }
});"
`;

exports[`handles nested blocks 2`] = `

CSS:

.bh6xni0 {
  font-family: var(--bh6xni0-0);

  &:hover {
    border-color: blue;
  }

  @media (max-width: 200px) {
    width: 100%;
  }
}

Dependencies: NA

`;

exports[`handles variant classes 1`] = `
"import { styled } from 'linaria/react';
export const Button =
/*#__PURE__*/
styled(\\"button\\")({
  name: \\"Button\\",
  class: \\"bh6xni0\\",
  vars: {
    \\"bh6xni0-0\\": [props => props.color]
  }
});"
`;

exports[`handles variant classes 2`] = `

CSS:

.bh6xni0 {
  background: var(--bh6xni0-0);
  padding: 16px 24px;
  transition: 200ms;
  font-size: 24px;
  &:hover {
    color: var(--bh6xni0-0);
    background: white;
  }


}

Dependencies: NA

`;

exports[`ignores commented out expressions 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`ignores commented out expressions 2`] = `

CSS:

.th6xni0 {
  /* .th6xni0--primary-0 */
  font-size: /* var(--th6xni0-1) */ 10px;
}

Dependencies: NA

`;

exports[`includes unreferenced styles for :global 1`] = `
"import { css } from 'linaria';
import { styled } from 'linaria/react';
const a = \\"ah6xni0\\";
const B =
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"B\\",
  class: \\"b1u0rrat\\"
});"
`;

exports[`includes unreferenced styles for :global 2`] = `

CSS:

.ah6xni0 {
  :global() {
    .title {
      font-size: 14px;
    }
  }
}
.b1u0rrat {
  :global(.title) {
    font-size: 14px;
  }
}

Dependencies: NA

`;

exports[`inlines array styles as CSS string 1`] = `
"import { styled } from 'linaria/react';
const styles = [{
  flex: 1
}, {
  display: 'block',
  height: 24
}];
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`inlines array styles as CSS string 2`] = `

CSS:

.th6xni0 {
  flex: 1; display: block; height: 24px;
}

Dependencies: NA

`;

exports[`inlines object styles as CSS string 1`] = `
"import { styled } from 'linaria/react';
const cover = {
  position: 'absolute',
  top: 0,
  right: 0,
  bottom: 0,
  left: 0,
  opacity: 1,
  minHeight: 420,
  '&.shouldNotBeChanged': {
    borderColor: '#fff'
  },
  '@media (min-width: 200px)': {
    WebkitOpacity: .8,
    MozOpacity: .8,
    msOpacity: .8,
    OOpacity: .8,
    WebkitBorderRadius: 2,
    MozBorderRadius: 2,
    msBorderRadius: 2,
    OBorderRadius: 2,
    WebkitTransition: '400ms',
    MozTransition: '400ms',
    OTransition: '400ms',
    msTransition: '400ms'
  }
};
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`inlines object styles as CSS string 2`] = `

CSS:

.th6xni0 {
  position: absolute; top: 0; right: 0; bottom: 0; left: 0; opacity: 1; min-height: 420px; &.shouldNotBeChanged { border-color: #fff; } @media (min-width: 200px) { -webkit-opacity: 0.8; -moz-opacity: 0.8; -ms-opacity: 0.8; -o-opacity: 0.8; -webkit-border-radius: 2px; -moz-border-radius: 2px; -ms-border-radius: 2px; -o-border-radius: 2px; -webkit-transition: 400ms; -moz-transition: 400ms; -o-transition: 400ms; -ms-transition: 400ms; }
}

Dependencies: NA

`;

exports[`outputs valid CSS classname 1`] = `
"import { styled } from 'linaria/react';
export const ᾩPage$Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"\\\\u1FA9Page$Title\\",
  class: \\"_h6xni0\\"
});"
`;

exports[`outputs valid CSS classname 2`] = `

CSS:

._h6xni0 {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`prevents class name collision 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\",
  vars: {
    \\"th6xni0-0\\": [size, \\"px\\"],
    \\"th6xni0-1\\": [props => props.color]
  }
});

function Something() {
  const Title =
  /*#__PURE__*/
  styled(\\"h1\\")({
    name: \\"Title\\",
    class: \\"t1u0rrat\\",
    vars: {
      \\"t1u0rrat-0\\": [regular]
    }
  });
  return <Title />;
}"
`;

exports[`prevents class name collision 2`] = `

CSS:

.th6xni0 {
  font-size: var(--th6xni0-0);
  color: var(--th6xni0-1)
}
.t1u0rrat {
    font-family: var(--t1u0rrat-0);
  }

Dependencies: NA

`;

exports[`replaces unknown expressions with CSS custom properties 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\",
  vars: {
    \\"th6xni0-0\\": [size, \\"px\\"],
    \\"th6xni0-1\\": [props => props.color]
  }
});"
`;

exports[`replaces unknown expressions with CSS custom properties 2`] = `

CSS:

.th6xni0 {
  font-size: var(--th6xni0-0);
  color: var(--th6xni0-1);
}

Dependencies: NA

`;

exports[`supports both css and styled tags 1`] = `
"import { css } from 'linaria';
import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});
export const title = \\"t1u0rrat\\";"
`;

exports[`supports both css and styled tags 2`] = `

CSS:

.th6xni0 {
  font-size: 14px;
}
.t1u0rrat {
  color: blue;
}

Dependencies: NA

`;

exports[`thows if alternative propName is used and a modifier selector is not a function of the propName. 1`] = `
"<<DIRNAME>>/app/index.js: Expected modifier condition to access state
  3 | const Page = (state => styled.div\`
  4 |   color: #fff;
> 5 |   &\${[props.primary]} {
    |      ^
  6 |     color: #241047;
  7 |   }
  8 | \`)({})"
`;

exports[`thows if state selector not not wrapped in arrow function 1`] = `
"<<DIRNAME>>/app/index.js: You must wrap the styled tag in an arrow function or this condition must be a function.
  3 | const Page = styled.div\`
  4 |   color: #fff;
> 5 |   &\${[props.primary]} {
    |       ^
  6 |     color: #241047;
  7 |   }
  8 | \`"
`;

exports[`throws if state selector is nested 1`] = `
"<<DIRNAME>>/app/index.js: Modifier expression must not be nested.
   6 |     color: #241047;
   7 |     /* This should not work */
>  8 |     body &\${[props.input === \\"I agree\\"]} {
     |             ^
   9 |       text-shadow: 9px 9px 9px rgba(0, 255, 0, 0.28);
  10 |     }
  11 |   }"
`;

exports[`throws if wrapping arrow function contains more than one argument 1`] = `
"<<DIRNAME>>/app/index.js: Styled component arrow function can only accept one props argument or things may break from rewrite.
If this is not an error, wrap it in another arrow function:
const Button = config => (props => styled.button\`\`)({})
  1 | import { styled } from 'linaria/react';
  2 | 
> 3 | export const Title = ((props, options) => styled.h1\`
    |                       ^
  4 |   font-size: 14px;
  5 | \`)({});"
`;

exports[`throws if wrapping arrow function is not called immediately 1`] = `
"<<DIRNAME>>/app/index.js: A styled component's wrapping function must be called immediately
  1 | import { styled } from 'linaria/react';
  2 | 
> 3 | export const Title = props => styled.h1\`
    |                      ^
  4 |   font-size: 14px;
  5 | \`;"
`;

exports[`throws if wrapping arrow function is not called with empty object 1`] = `
"<<DIRNAME>>/app/index.js: A styled component's wrapping function expects an empty object literal
  3 | export const Title = (props => styled.h1\`
  4 |   font-size: 14px;
> 5 | \`)('break');
    |    ^"
`;

exports[`throws when contains dynamic expression without evaluate: true in css tag 1`] = `
"<<DIRNAME>>/app/index.js: The CSS cannot contain JavaScript expressions when using the 'css' tag. To evaluate the expressions at build time, pass 'evaluate: true' to the babel plugin.
  2 | 
  3 | const title = css\`
> 4 |   font-size: \${size}px;
    |                ^
  5 | \`;"
`;

exports[`throws when modifier selector array contains more than one element 1`] = `
"<<DIRNAME>>/app/index.js: Modifier expression array must contain only 1 element
  4 | export const Modified = (props => styled.div\`
  5 |   &:hover {
> 6 |     &\${[props.primary, 1]} {
    |        ^
  7 |       color: blue;
  8 |     }
  9 |     font-size: \${size}px;"
`;

exports[`transpiles css template literal 1`] = `
"import { css } from 'linaria';
export const title = \\"th6xni0\\";"
`;

exports[`transpiles css template literal 2`] = `

CSS:

.th6xni0 {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with function and component 1`] = `
"import { styled } from 'linaria/react';

const Heading = () => null;

export const Title =
/*#__PURE__*/
styled(Heading)({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`transpiles styled template literal with function and component 2`] = `

CSS:

.th6xni0 {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with function and tag 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled('h1')({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`transpiles styled template literal with function and tag 2`] = `

CSS:

.th6xni0 {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`transpiles styled template literal with object 1`] = `
"import { styled } from 'linaria/react';
export const Title =
/*#__PURE__*/
styled(\\"h1\\")({
  name: \\"Title\\",
  class: \\"th6xni0\\"
});"
`;

exports[`transpiles styled template literal with object 2`] = `

CSS:

.th6xni0 {
  font-size: 14px;
}

Dependencies: NA

`;

exports[`uses the same custom property for the same expression 1`] = `
"import { styled } from 'linaria/react';
export const Box =
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"Box\\",
  class: \\"bh6xni0\\",
  vars: {
    \\"bh6xni0-0\\": [props => props.size, \\"px\\"]
  }
});"
`;

exports[`uses the same custom property for the same expression 2`] = `

CSS:

.bh6xni0 {
  height: var(--bh6xni0-0);
  width: var(--bh6xni0-0);
}

Dependencies: NA

`;

exports[`uses the same custom property for the same identifier 1`] = `
"import { styled } from 'linaria/react';
export const Box =
/*#__PURE__*/
styled(\\"div\\")({
  name: \\"Box\\",
  class: \\"bh6xni0\\",
  vars: {
    \\"bh6xni0-0\\": [size, \\"px\\"]
  }
});"
`;

exports[`uses the same custom property for the same identifier 2`] = `

CSS:

.bh6xni0 {
  height: var(--bh6xni0-0);
  width: var(--bh6xni0-0);
}

Dependencies: NA

`;
